[수정] 활동 다시 열기 삭제, 활동 상태 변경 유효성 검증 추가  - 활동 다시 열기 삭제 (사유 : 불필요)  - 모집 마감, 활동 종료 시 유효성 검증 추가